syntax = "proto3";

package kessel.inventory.v1beta2;

import "google/api/annotations.proto";
import "kessel/inventory/v1beta2/common.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

service KesselLookupService {
	rpc LookupResources(LookupResourcesRequest) returns (stream LookupResourcesResponse) {
		option (google.api.http) = {
			get: "/api/inventory/v1beta2/resources"
		};
	};
}

message LookupResourcesRequest {
	ObjectType resource_type = 1 [(buf.validate.field).required = true];
	string relation = 2 [(buf.validate.field).string.min_len = 1];
	SubjectReference subject = 3 [(buf.validate.field).required = true];
	optional RequestPagination pagination = 4;
	optional Consistency consistency = 5;
}

message LookupResourcesResponse {
	ObjectReference resource = 1;
	ResponsePagination pagination = 2;
	ConsistencyToken consistency_token = 3;
}